# configuration

./: .travis.yml  Cargo.toml  LICENSE.md  Makefile  README.md
.github/workflows/: build.yml
src/: lib.rs  node.rs  result.rs  tree.rs
src/format/: mod.rs  toml.rs
