[package]
name = "configuration"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides a means of configuration."
documentation = "https://docs.rs/configuration"
homepage = "https://github.com/stainless-steel/configuration"
repository = "https://github.com/stainless-steel/configuration"
